Fix some spacing

--- a/styles/index.less
+++ b/styles/index.less
@@ -362,6 +362,9 @@ select option {
   font-size: 0.8em;
   line-height: 1.5em;
 }
+.charaHouseLevel {
+  padding-top:0.5em;
+}
 hr {
   padding: 0;
   border: none;
